--- a/input-disabled/index.html
+++ b/input-disabled/index.html
@@ -3,7 +3,7 @@
   <input type="submit" value="Ok" />
 </form>
 
-<script ltype="text/javascript">
+<script type="text/javascript">
 var $name = document.getElementById('name'),
     $form = document.getElementById('form');
 
