--- a/text-images/index.html
+++ b/text-images/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
+<link rel="stylesheet" href="../gh-fork-ribbon.css" />
+
 </head>
 <body>
 <p>Imagens existentes: </p>
@@ -27,5 +29,13 @@ $text.addEventListener('blur', function(){
   $view.appendChild(img);
 });
 </script>
+
+
+<div class="github-fork-ribbon-wrapper right">
+  <div class="github-fork-ribbon">
+    <a href="https://github.com/wbruno/examples">Fork me on GitHub</a>
+  </div>
+</div>
+
 </body>
 </html>
