Added fork me ribbon

--- a/calc-table/index.html
+++ b/calc-table/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
+  <link rel="stylesheet" href="../gh-fork-ribbon.css" />
+
 </head>
 <body>
 <table>
@@ -57,6 +59,11 @@
 }());
 </script>
 
+<div class="github-fork-ribbon-wrapper right">
+  <div class="github-fork-ribbon">
+    <a href="https://github.com/wbruno/examples">Fork me on GitHub</a>
+  </div>
+</div>
 </body>
 </html>
 
