--- a/change-links/index.html
+++ b/change-links/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <link rel="stylesheet" href="../gh-fork-ribbon.css" />
+
 </head>
 <body>
     <textarea name="text" id="text" cols="70" rows="10">
@@ -12,5 +14,11 @@ Lorem ipsum <a href="http://www.google.com.br">dolor sit amet</a>, consectetur <
 
     <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="all.js"></script>
+
+<div class="github-fork-ribbon-wrapper right">
+  <div class="github-fork-ribbon">
+    <a href="https://github.com/wbruno/examples">Fork me on GitHub</a>
+  </div>
+</div>
 </body>
 </html>
