--- a/check-count/index.html
+++ b/check-count/index.html
@@ -3,22 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <link rel="stylesheet" href="../gh-fork-ribbon.css" />
 <style>
 label { display: block; }
 </style>
 </head>
 <body>
 
-    <label><input type="checkbox" name="ch[]" /></label>
-    <label><input type="checkbox" name="ch[]" /></label>
-    <label><input type="checkbox" name="ch[]" /></label>
-    <label><input type="checkbox" name="ch[]" /></label>
-    <label><input type="checkbox" name="ch[]" /></label>
-    <label><input type="checkbox" name="ch[]" /></label>
-    <label><input type="checkbox" name="ch[]" /></label>
-    <label><input type="checkbox" name="ch[]" /></label>
-    <label><input type="checkbox" name="ch[]" /></label>
-    <label><input type="checkbox" name="ch[]" /></label>
+    <label><input type="checkbox" name="ch[]" /> Clique aqui!</label>
+    <label><input type="checkbox" name="ch[]" /> Clique aqui!</label>
+    <label><input type="checkbox" name="ch[]" /> Clique aqui!</label>
+    <label><input type="checkbox" name="ch[]" /> Clique aqui!</label>
+    <label><input type="checkbox" name="ch[]" /> Clique aqui!</label>
+    <label><input type="checkbox" name="ch[]" /> Clique aqui!</label>
+    <label><input type="checkbox" name="ch[]" /> Clique aqui!</label>
+    <label><input type="checkbox" name="ch[]" /> Clique aqui!</label>
+    <label><input type="checkbox" name="ch[]" /> Clique aqui!</label>
+    <label><input type="checkbox" name="ch[]" /> Clique aqui!</label>
 
     <p id="result"></p>
 
@@ -54,5 +55,11 @@ label { display: block; }
 
 }(document));
 </script>
+
+<div class="github-fork-ribbon-wrapper right">
+  <div class="github-fork-ribbon">
+    <a href="https://github.com/wbruno/examples">Fork me on GitHub</a>
+  </div>
+</div>
 </body>
 </html>
