--- a/check-json/index.html
+++ b/check-json/index.html
@@ -1,6 +1,8 @@
 <html>
 <head>
     <meta charset="utf8" />
+    <link rel="stylesheet" href="../gh-fork-ribbon.css" />
+
 </head>
 <body>
     <input type="checkbox" id="Aprendizagem_e_crescimento" value="Aprendizagem e crescimento" name="perspectiva[]" />Aprendizagem<br />
@@ -20,5 +22,11 @@ arr.forEach(function(each){
     $("input[name='perspectiva[]'][value='"+each+"']").attr("checked", "checked");
 })
 </script>
+
+<div class="github-fork-ribbon-wrapper right">
+  <div class="github-fork-ribbon">
+    <a href="https://github.com/wbruno/examples">Fork me on GitHub</a>
+  </div>
+</div>
 </body>
 </html>
