--- a/ajax-2000ms/index.html
+++ b/ajax-2000ms/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
+  <link rel="stylesheet" href="../gh-fork-ribbon.css" />
 
 </head>
 <body>
@@ -61,5 +62,11 @@
 
 }(jQuery));
 </script>
+
+<div class="github-fork-ribbon-wrapper right">
+  <div class="github-fork-ribbon">
+    <a href="https://github.com/wbruno/examples">Fork me on GitHub</a>
+  </div>
+</div>
 </body>
 </html>
