Added Fork Me Ribbon

--- a/input-disabled/index.html
+++ b/input-disabled/index.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="../gh-fork-ribbon.css" />
+  <title>Document</title>
+</head>
+<body>
+
+
 <form action="" id="form">
   <input type="text" id="name" />
   <input type="submit" value="Ok" />
@@ -32,3 +42,10 @@ $form2.addEventListener('submit', function(event){
 });
 </script>
 
+<div class="github-fork-ribbon-wrapper right">
+  <div class="github-fork-ribbon">
+    <a href="https://github.com/wbruno/examples">Fork me on GitHub</a>
+  </div>
+</div>
+</body>
+</html>
