--- a/select-sum/index.html
+++ b/select-sum/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="../gh-fork-ribbon.css" />
   <title>Document</title>
 </head>
 <body>
@@ -45,6 +46,11 @@
 }());
 </script>
 
+<div class="github-fork-ribbon-wrapper right">
+  <div class="github-fork-ribbon">
+    <a href="https://github.com/wbruno/examples">Fork me on GitHub</a>
+  </div>
+</div>
 </body>
 </html>
 
