--- a/show-hide/index.html
+++ b/show-hide/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../gh-fork-ribbon.css" />
     <title>Document</title>
 <style>
 .box {
@@ -22,45 +23,45 @@
     <a href="#" class="lnk-show" data-div="1">mostrar</a>
     <a href="#" class="lnk-hide" data-div="1">esconder</a>
     <br />
- 
+
     <a href="#" class="lnk-show" data-div="2">mostrar</a>
     <a href="#" class="lnk-hide" data-div="2">esconder</a>
     <br />
- 
+
     <a href="#" class="lnk-show" data-div="3">mostrar</a>
     <a href="#" class="lnk-hide" data-div="3">esconder</a>
     <br />
- 
+
     <a href="#" class="lnk-show" data-div="4">mostrar</a>
     <a href="#" class="lnk-hide" data-div="4">esconder</a>
     <br />
- 
+
     <a href="#" class="lnk-show" data-div="5">mostrar</a>
     <a href="#" class="lnk-hide" data-div="5">esconder</a>
     <br />
- 
- 
+
+
     <br />
- 
+
     <div class="box fleft" data-me="1">1</div>
     <div class="box fleft is-hidden" data-me="2">2</div>
     <div class="box fleft is-hidden" data-me="3">3</div>
     <div class="box fleft is-hidden" data-me="4">4</div>
     <div class="box fleft is-hidden" data-me="5">5</div>
- 
+
 <script>
 (function() {
     "use strict";
     /*jslint browser:true*/
- 
+
     var $boxes = document.getElementsByClassName("box"),
         $lnksShow = document.getElementsByClassName("lnk-show"),
         $lnksHide = document.getElementsByClassName("lnk-hide");
- 
- 
+
+
     function loop($els, cb) {
         var i = $els.length;
- 
+
         while (i > 0) {
             i--;
             cb($els[i]);
@@ -74,14 +75,14 @@
     function getDiv(n) {
         return document.querySelector("[data-me='" + n + "']");
     }
- 
+
     loop($lnksShow, function($lnk) {
         $lnk.addEventListener("click", function(e) {
             e.preventDefault();
             var div = getDiv(this.getAttribute("data-div"));
- 
+
             hideAll($boxes);
- 
+
             div.classList.remove("is-hidden");
         });
     });
@@ -89,13 +90,20 @@
         $lnk.addEventListener("click", function(e) {
             e.preventDefault();
             var div = getDiv(this.getAttribute("data-div"));
- 
+
             div.classList.add("is-hidden");
         });
     });
- 
- 
+
+
 }());
 </script>
+
+
+<div class="github-fork-ribbon-wrapper right">
+  <div class="github-fork-ribbon">
+    <a href="https://github.com/wbruno/examples">Fork me on GitHub</a>
+  </div>
+</div>
 </body>
 </html>
