--- a/time-counter/index.html
+++ b/time-counter/index.html
@@ -2,20 +2,21 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="../gh-fork-ribbon.css" />
   <title>Document</title>
 </head>
 <body>
 
-<time data-end="2014-09-04-15-03-01" class="counter"></time>
+<time data-end="2015-09-04-15-03-01" class="counter"></time>
 <br><br>
 
-<time data-end="2014-09-03-15-03-11" class="counter"></time>
+<time data-end="2015-09-03-15-03-11" class="counter"></time>
 <br><br>
 
-<time data-end="2014-09-01-12-02-31" class="counter"></time>
+<time data-end="2015-09-01-12-02-31" class="counter"></time>
 <br><br>
 
-<time data-end="2015-09-10-8-32-51" class="counter"></time>
+<time data-end="2016-09-10-8-32-51" class="counter"></time>
 
 
 <script src="time-counter.js"></script>
@@ -30,5 +31,10 @@ setInterval(function () {
 }, 1000);
 </script>
 
+<div class="github-fork-ribbon-wrapper right">
+  <div class="github-fork-ribbon">
+    <a href="https://github.com/wbruno/examples">Fork me on GitHub</a>
+  </div>
+</div>
 </body>
 </html>
