--- a/upload-ajax/index.html
+++ b/upload-ajax/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8" />
+  <link rel="stylesheet" href="../gh-fork-ribbon.css" />
   <title>Upload ajax</title>
 </head>
 <body>
@@ -59,5 +60,10 @@ $formUpload.addEventListener('submit', function(event){
 
 </script>
 
+<div class="github-fork-ribbon-wrapper right">
+  <div class="github-fork-ribbon">
+    <a href="https://github.com/wbruno/examples">Fork me on GitHub</a>
+  </div>
+</div>
 </body>
 </html>
