--- a/disable_inputs/index.html
+++ b/disable_inputs/index.html
@@ -1,5 +1,7 @@
 <html>
 <head>
+  <meta charset="utf8" />
+  <link rel="stylesheet" href="../gh-fork-ribbon.css" />
 
 </head>
 <body>
@@ -66,5 +68,11 @@
 
 }());
 </script>
+
+<div class="github-fork-ribbon-wrapper right">
+  <div class="github-fork-ribbon">
+    <a href="https://github.com/wbruno/examples">Fork me on GitHub</a>
+  </div>
+</div>
 </body>
 </html>
