--- a/rotate/index.html
+++ b/rotate/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+    <link rel="stylesheet" href="../gh-fork-ribbon.css" />
 	<title>Document</title>
 
 <style>
@@ -48,5 +49,11 @@
     });
 }());
 </script>
+
+<div class="github-fork-ribbon-wrapper right">
+  <div class="github-fork-ribbon">
+    <a href="https://github.com/wbruno/examples">Fork me on GitHub</a>
+  </div>
+</div>
 </body>
 </html>
