--- a/slider100/index.html
+++ b/slider100/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../gh-fork-ribbon.css" />
     <title>Document</title>
 
     <link rel="stylesheet" href="style.css" />
@@ -53,5 +54,12 @@
     </section><!-- #content-about -->
 
     <script src="all.js"></script>
+
+
+<div class="github-fork-ribbon-wrapper right">
+  <div class="github-fork-ribbon">
+    <a href="https://github.com/wbruno/examples">Fork me on GitHub</a>
+  </div>
+</div>
 </body>
 </html>
