--- a/star-rating/index.html
+++ b/star-rating/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+  <link rel="stylesheet" href="../gh-fork-ribbon.css" />
 <style type="text/css">
 * { margin: 0; padding: 0; list-style: none; }
 .stars {
@@ -118,5 +119,11 @@ $(document).ready(function(){
 });
 </script>
 
+
+<div class="github-fork-ribbon-wrapper right">
+  <div class="github-fork-ribbon">
+    <a href="https://github.com/wbruno/examples">Fork me on GitHub</a>
+  </div>
+</div>
 </body>
 </html>
