--- a/yt-iframe-api/index.html
+++ b/yt-iframe-api/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="../gh-fork-ribbon.css" />
   <title>Youtube iFrame API</title>
 </head>
 <body>
@@ -23,5 +24,12 @@
     player.pauseVideo();
   });
   </script>
+
+
+<div class="github-fork-ribbon-wrapper right">
+  <div class="github-fork-ribbon">
+    <a href="https://github.com/wbruno/examples">Fork me on GitHub</a>
+  </div>
+</div>
 </body>
 </html>
