--- a/select-radio/select.html
+++ b/select-radio/select.html
@@ -1,11 +1,11 @@
-&lt;!DOCTYPE html>
-&lt;html lang="en">
-&lt;head>
-  &lt;meta charset="UTF-8">
-  &lt;title>Document&lt;/title>
-  &lt;link rel="stylesheet" href="../gh-fork-ribbon.css" />
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Document</title>
+  <link rel="stylesheet" href="../gh-fork-ribbon.css" />
 
-&lt;script type="text/javascript">
+<script type="text/javascript">
 function id(el) {
   return document.getElementById(el);
 }
@@ -36,26 +36,26 @@ window.addEventListener('load', function() {
     mostra(this);
   });
 });
-&lt;/script>
-&lt;/head>
-&lt;body>
-  &lt;select name="sel-sexo" id="sel-sexo">
-    &lt;option value="">--&lt;/option>
-    &lt;option value="Feminino">Feminino&lt;/option>
-    &lt;option value="Masculino">Masculino&lt;/option>
-  &lt;/select>
+</script>
+</head>
+<body>
+  <select name="sel-sexo" id="sel-sexo">
+    <option value="">--</option>
+    <option value="Feminino">Feminino</option>
+    <option value="Masculino">Masculino</option>
+  </select>
 
-  &lt;div id="palco">
-    &lt;div id="Masculino">Seu sexo é Masculino!&lt;/div>
-    &lt;div id="Feminino">Seu sexo é Feminino!&lt;/div>
-  &lt;/div>
+  <div id="palco">
+    <div id="Masculino">Seu sexo é Masculino!</div>
+    <div id="Feminino">Seu sexo é Feminino!</div>
+  </div>
 
 
 
-&lt;div class="github-fork-ribbon-wrapper right">
-  &lt;div class="github-fork-ribbon">
-    &lt;a href="https://github.com/wbruno/examples">Fork me on GitHub&lt;/a>
-  &lt;/div>
-&lt;/div>
-&lt;/body>
-&lt;/html>
+<div class="github-fork-ribbon-wrapper right">
+  <div class="github-fork-ribbon">
+    <a href="https://github.com/wbruno/examples">Fork me on GitHub</a>
+  </div>
+</div>
+</body>
+</html>
