--- a/select-radio/radio.html
+++ b/select-radio/radio.html
@@ -1,11 +1,11 @@
-&lt;!DOCTYPE html>
-&lt;html lang="en">
-&lt;head>
-  &lt;meta charset="UTF-8">
-  &lt;title>Document&lt;/title>
-  &lt;link rel="stylesheet" href="../gh-fork-ribbon.css" />
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Document</title>
+  <link rel="stylesheet" href="../gh-fork-ribbon.css" />
 
-&lt;script type="text/javascript">
+<script type="text/javascript">
 function id(el) {
   return document.getElementById(el);
 }
@@ -42,23 +42,23 @@ window.addEventListener('load', function() {
     });
   });
 });
-&lt;/script>
-&lt;/head>
-&lt;body>
-&lt;label>
-  &lt;label>&lt;input type="radio" name="rd-sexo" value="Feminino" />Feminino&lt;/label>
-  &lt;label>&lt;input type="radio" name="rd-sexo" value="Masculino" />Masculino&lt;/label>
+</script>
+</head>
+<body>
+<label>
+  <label><input type="radio" name="rd-sexo" value="Feminino" />Feminino</label>
+  <label><input type="radio" name="rd-sexo" value="Masculino" />Masculino</label>
 
-  &lt;div id="palco">
-    &lt;div id="Masculino">Seu sexo é Masculino!&lt;/div>
-    &lt;div id="Feminino">Seu sexo é Feminino!&lt;/div>
-  &lt;/div>
+  <div id="palco">
+    <div id="Masculino">Seu sexo é Masculino!</div>
+    <div id="Feminino">Seu sexo é Feminino!</div>
+  </div>
 
 
-&lt;div class="github-fork-ribbon-wrapper right">
-  &lt;div class="github-fork-ribbon">
-    &lt;a href="https://github.com/wbruno/examples">Fork me on GitHub&lt;/a>
-  &lt;/div>
-&lt;/div>
-&lt;/body>
-&lt;/html>
+<div class="github-fork-ribbon-wrapper right">
+  <div class="github-fork-ribbon">
+    <a href="https://github.com/wbruno/examples">Fork me on GitHub</a>
+  </div>
+</div>
+</body>
+</html>
