--- a/input-img/index.html
+++ b/input-img/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
+  <link rel="stylesheet" href="../gh-fork-ribbon.css" />
 </head>
 <body>
 
@@ -30,5 +31,12 @@ $file.addEventListener('change', function(){
   reader.readAsDataURL(this.files[0]);
 });
 </script>
+
+
+<div class="github-fork-ribbon-wrapper right">
+  <div class="github-fork-ribbon">
+    <a href="https://github.com/wbruno/examples">Fork me on GitHub</a>
+  </div>
+</div>
 </body>
 </html>
