--- a/music-slide/index.html
+++ b/music-slide/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
+  <link rel="stylesheet" href="../gh-fork-ribbon.css" />
 
 <style type="text/css">
 #slide {
@@ -91,5 +92,11 @@
 
 }());
 </script>
+
+<div class="github-fork-ribbon-wrapper right">
+  <div class="github-fork-ribbon">
+    <a href="https://github.com/wbruno/examples">Fork me on GitHub</a>
+  </div>
+</div>
 </body>
 </html>
