--- a/i-promise-you/promise.html
+++ b/i-promise-you/promise.html
@@ -9,6 +9,7 @@
 <script type="text/javascript">
 'use strict';
 var err = 'Some error';
+// err = '';
 var obj = { name: 'wBruno '};
 
 var p1 = new Promise(function(resolve, reject) {
@@ -26,6 +27,7 @@ p1.then(function(result) {
   .catch(function(err) {
     console.log('Error: ', err);
   });
+
 </script>
 
 
