--- a/modal/index.html
+++ b/modal/index.html
@@ -230,9 +230,9 @@ h5 span:after {
       event.stopPropagation();
     });
 
-    document.addEventListener('keydown', function(event) {
+    document.addEventListener('keydown', function() {
       if (27 === event.keyCode) {
-        closeModal(event);
+        closeModal();
       }
     }, false);
 
@@ -245,7 +245,6 @@ h5 span:after {
     }
 
     function closeModal(event) {
-      event && event.stopPropagation();
       let modal = $element.classList;
       modal.remove('opened');
       modal.add('closed');
